# Compass

./: CONTRIBUTING.md  README.md  pyproject.toml
compass/: __init__.py  logging.py  pipeline.py  version.py
compass/components/agents/: __init__.py  anthropic_agent.py  base_agent.py  openai_agent.py
compass/components/embedders/: __init__.py  sentence_transformer.py
compass/components/generators/: __init__.py  openai.py
compass/components/retrievers/: __init__.py  vector_retriever.py
compass/components/tools/: __init__.py  function_tool.py  registry.py  tool.py
compass/dataclasses/: __init__.py  answer.py  chat_message.py  document.py
compass/document_stores/: __init__.py  in_memory.py
examples/: agent_example.py  simple_rag.py
test/dataclasses/: test_document.py
